Add service worker registration and caching functionality to multiple templates

--- a/pythonanywhere/templates/battle.html
+++ b/pythonanywhere/templates/battle.html
@@ -314,7 +314,15 @@
         font-size: 1rem;
       }
     }
-  </style>   
+  </style>
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/static/sw_js/sw.js')
+        .then(() => console.log('Service Worker Registered'))
+        .catch(console.error);
+    }
+  </script>
+     
 </head>
 <body>
   <button id="fullscreenButton">Volledig scherm</button>
