--- a/pythonanywhere/templates/index.html
+++ b/pythonanywhere/templates/index.html
@@ -594,6 +594,13 @@
             background-color: #616161;
         }
     </style>
+    <script>
+        if ('serviceWorker' in navigator) {
+          navigator.serviceWorker.register('/static/sw_js/sw.js')
+            .then(() => console.log('Service Worker Registered'))
+            .catch(console.error);
+        }
+    </script>
 </head>
 <body>
     <header>
