--- a/pythonanywhere/templates/leaderboard.html
+++ b/pythonanywhere/templates/leaderboard.html
@@ -114,6 +114,13 @@
 
     </style>
 </head>
+<script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/static/sw_js/sw.js')
+        .then(() => console.log('Service Worker Registered'))
+        .catch(console.error);
+    }
+</script>
 <body>
     <div class="leaderboard-container">
         <div class="leaderboard-header">Leaderboard</div>
