--- a/pythonanywhere/templates/spectate.html
+++ b/pythonanywhere/templates/spectate.html
@@ -77,6 +77,13 @@
       100% { opacity: 0; }
     }
   </style>
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/static/sw_js/sw.js')
+        .then(() => console.log('Service Worker Registered'))
+        .catch(console.error);
+    }
+  </script>
 </head>
 <body>
   <a href="/spectate" class="back-button">← Back</a>
