--- a/pythonanywhere/templates/404.html
+++ b/pythonanywhere/templates/404.html
@@ -66,6 +66,14 @@
     }
 
   </style>
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/static/sw_js/sw.js')
+        .then(() => console.log('Service Worker Registered'))
+        .catch(console.error);
+    }
+  </script>
+  
 </head>
 <body>
   <div class="container">
