--- a/pythonanywhere/templates/account.html
+++ b/pythonanywhere/templates/account.html
@@ -392,6 +392,14 @@
             }
         }
     </style>
+    <script>
+        if ('serviceWorker' in navigator) {
+          navigator.serviceWorker.register('/static/sw_js/sw.js')
+            .then(() => console.log('Service Worker Registered'))
+            .catch(console.error);
+        }
+    </script>
+      
 </head>
 <body>
     <header>
