--- a/pythonanywhere/templates/signup.html
+++ b/pythonanywhere/templates/signup.html
@@ -156,6 +156,13 @@
         }
 
     </style>
+    <script>
+        if ('serviceWorker' in navigator) {
+          navigator.serviceWorker.register('/static/sw_js/sw.js')
+            .then(() => console.log('Service Worker Registered'))
+            .catch(console.error);
+        }
+    </script>
 </head>
 <body>
     <h1 class="page-title">Future Notes</h1>
